--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "mongodb": "^6.4.0",
     "socket.io": "^4.7.4"
   }
 }
